# opentelemetry-cpp

./: .gitignore  CMakeLists.txt  runcustomtests.sh
api/include/opentelemetry/common/: attribute_value.h
api/include/opentelemetry/metrics/: async_instruments.h  instrument.h  meter.h  noop.h  sync_instruments.h
api/test/metrics/: BUILD  CMakeLists.txt  noop_instrument_test.cc
examples/metrics_simple/: README.md  main.cc
exporters/: CMakeLists.txt
exporters/ostream/: BUILD  CMakeLists.txt
exporters/ostream/include/opentelemetry/exporters/ostream/: metrics_exporter.h  span_exporter.h
exporters/ostream/src/: CMakeLists.txt  metrics_exporter.cc  span_exporter.cc
exporters/ostream/test/: CMakeLists.txt
sdk/include/opentelemetry/sdk/metrics/: aggregator.h  async_instruments.h  controller.h  instrument.h  meter.h  observer_result.h  observer_result.ignore  record.ignore  sync_instruments.h  ungrouped_processor.h
sdk/include/opentelemetry/sdk/metrics/aggregator/: aggregator.h  counter_aggregator.h  histogram_aggregator.h  min_max_sum_count_aggregator.h  sketch_aggregator.h
sdk/src/metrics/: CMakeLists.txt  aggregator.cc  async_instruments.ignore  instrument.ignore  meter.cc  meter.ignore  sync_instruments.ignore  ungrouped_processor.cc
sdk/test/data/: RefAnswers.csv  RefData.csv
sdk/test/metrics/: BUILD  CMakeLists.txt  aggregator_test.cc  controller_test.cc  histogram_aggregator_test.cc  meter_test.cc  metric_instrument_benchmark.cc  metric_instrument_test.cc  pipeline_test.cc  record_test.cc
